--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ document.getElementById("quoteForm").addEventListener("submit",e=>{
   window.open(whatsapp,"_blank");
 });
 document.getElementById("year").textContent=new Date().getFullYear();
-  
+  <script/> <script>
 
 <!-- ========== FRUIT SLICE FULLSCREEN MODAL (COPY-PASTE BELOW INTO index.html) ========== -->
 <style>
